[package]
name = "dc-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
license_file = "LICENSE"
description = "A reverse polish calculator command line tool."
repository = "https://github.com/lillycat332/dc-cli"
authors = ["Lilly Cham"]
homepage = "https://haskell.gay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
directories = "4.0.1"
dc-ock = "2.0.0"